--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap-pro/extension-file-handler": "^2.16.3",
+    "@tiptap-pro/extension-unique-id": "^2.16.3",
+    "@tiptap/extension-color": "^2.10.3",
+    "@tiptap/extension-highlight": "^2.10.3",
+    "@tiptap/extension-image": "^2.10.3",
+    "@tiptap/extension-placeholder": "^2.10.3",
+    "@tiptap/extension-text-align": "^2.10.3",
+    "@tiptap/extension-underline": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "antd": "^5.22.1",
     "axios": "^1.7.9",
     "firebase": "^11.0.2",
@@ -14,6 +25,8 @@
     "react-hook-form": "^7.53.2",
     "react-router": "^7.0.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.83.0",
+    "tiptap-extension-resize-image": "^1.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
